--- a/src/components/clear-local-metadata/clear-local-metadata.html
+++ b/src/components/clear-local-metadata/clear-local-metadata.html
@@ -6,7 +6,7 @@
       <button ion-button block style="text-transform: none;" (tap)="autoSelect('selectAll')">{{ translationMapper['Select all'] }}</button>
     </ion-col>
     <ion-col>
-      <button ion-button block style="text-transform: none;" (tap)="autoSelect('unSelectAll')">{{ translationMapper['Deselect All'] }} </button>
+      <button ion-button block style="text-transform: none;" (tap)="autoSelect('unSelectAll')">{{ translationMapper['Deselect all'] }} </button>
     </ion-col>
   </ion-row>
   <ion-row *ngIf="!showLoadingMessage">
