--- a/src/components/available-local-instance/available-local-instance.html
+++ b/src/components/available-local-instance/available-local-instance.html
@@ -5,7 +5,7 @@
   <ion-grid>
     <ion-row>
       <ion-col col-11>
-        <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
+        <ion-searchbar animated="true" autocomplete="on" placeholder="{{ translationMapper['Search']}}" (ionInput)="getFilteredList($event)"></ion-searchbar>
       </ion-col>
       <ion-col col-1 (click)="closeContainer()" padding-top class="cancel-button">
         <img [src]="cancelIcon" />
@@ -19,7 +19,7 @@
             <ion-icon name="ios-arrow-forward" item-right></ion-icon>
           </ion-item>
           <ion-item *ngIf="localInstances && localInstances.length == 0">
-            <empty-list-notification [emptyListMessage]="'there is no local instance to select'"></empty-list-notification>
+            <empty-list-notification [emptyListMessage]="translationMapper['There is no local instance to select']"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
