--- a/src/components/multi-organisation-unit/multi-organisation-unit.html
+++ b/src/components/multi-organisation-unit/multi-organisation-unit.html
@@ -1,14 +1,3 @@
 <div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;">
-  <ion-item>
-    <ion-icon (click)="toggleTree(organisationUnit,currentIndex)" name="ios-add-circle-outline" *ngIf="(toggledOuIds.indexOf(organisationUnit.id) == -1) && (organisationUnit.children && organisationUnit.children.length > 0)"
-      item-left></ion-icon>
-    <ion-icon (click)="toggleTree(organisationUnit,currentIndex)" name="ios-remove-circle-outline" *ngIf="(toggledOuIds.indexOf(organisationUnit.id) > -1) && (organisationUnit.children && organisationUnit.children.length > 0)"
-      item-left></ion-icon>
-    <div (click)="selectOrganisationUnit(organisationUnit)">
-      {{ organisationUnit.name }}
-    </div>
-  </ion-item>
-  <div padding-left *ngIf="(toggledOuIds.indexOf(organisationUnit.id) > -1)">
-    <multi-organisation-unit [organisationUnits]="organisationUnit.children" [currentUser]="currentUser" [(toggledOuIds)]="toggledOuIds"></multi-organisation-unit>
-  </div>
+  <multi-organisation-unit-tree [organisationUnit]="organisationUnit" [currentUser]="currentUser" [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
 </div>
