--- a/src/components/multi-organisation-unit/multi-organisation-unit.html
+++ b/src/components/multi-organisation-unit/multi-organisation-unit.html
@@ -1,4 +1,12 @@
-<div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;">
-  <multi-organisation-unit-tree [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened" [organisationUnit]="organisationUnit"
-    [currentUser]="currentUser" [selectedOrgUnits]="selectedOrgUnits" [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
+<div *ngIf="isLoading">
+  <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
+</div>
+<div *ngIf="!isLoading">
+  <div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;">
+    <multi-organisation-unit-tree [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened" [organisationUnit]="organisationUnit"
+      [currentUser]="currentUser" [(selectedOrgUnits)]="selectedOrgUnits" [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
+  </div>
+  <div *ngIf="organisationUnits.length == 0 && emptyMessage !=''">
+    <empty-list-notification [emptyListMessage]="emptyMessage"></empty-list-notification>
+  </div>
 </div>
