Updating dashboard module with its translations support

--- a/src/components/multi-organisation-unit/multi-organisation-unit.html
+++ b/src/components/multi-organisation-unit/multi-organisation-unit.html
@@ -4,8 +4,8 @@
 <div *ngIf="!isLoading">
   <div *ngFor="let organisationUnit of organisationUnits;let currentIndex = index;">
     <multi-organisation-unit-tree [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened" [organisationUnit]="organisationUnit"
-      (activate)="onActivateOu($event)" (deactivate)="onDeactivateOu($event)" [currentUser]="currentUser" [(selectedOrgUnits)]="selectedOrgUnits"
-      [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
+      (activate)="onActivateOrganisationUnit($event)" (deactivate)="onDeactivateOrganisationUnit($event)" [currentUser]="currentUser"
+      [(selectedOrgUnits)]="selectedOrgUnits" [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
   </div>
   <div *ngIf="organisationUnits.length == 0 && emptyMessage !=''">
     <empty-list-notification [emptyListMessage]="emptyMessage"></empty-list-notification>
