--- a/src/modules/org-unit-filter/org-unit-filter.component.html
+++ b/src/modules/org-unit-filter/org-unit-filter.component.html
@@ -2,30 +2,30 @@
     <div class="panel-heading" style="background-color: #ffffff;padding-bottom: 5px;padding-top: 5px;padding-left: 3px">
         <div class="" (click)="displayOrgTree()">
             <span *ngIf="!orgUnitTreeConfig.loading">
-              {{  getProperPreOrgunitName() }}
-          </span>
+                {{ getProperPreOrgunitName() }}
+            </span>
             <span *ngIf="orgUnitModel.selectedOrgUnits.length > 10 && orgUnitModel.selectedUserOrgUnits.length == 0">
-            <span class="selected-item">
-              {{ orgUnitModel.selectedOrgUnits[0].name }}
-              <a (click)="deActivateNode(orgUnitModel.selectedOrgUnits[0].id,orgtree,$event)" class="removeorgunit" >x</a>
-            </span>
-            <span class="selected-item">
-              {{ orgUnitModel.selectedOrgUnits[1].name }}
-              <a (click)="deActivateNode(orgUnitModel.selectedOrgUnits[1].id,orgtree,$event)" class="removeorgunit">x</a>
-            </span>
-            <span class="selected-item">
-              &nbsp; and {{ orgUnitModel.selectedOrgUnits.length - 2 }} more
-            </span>
+                <span class="selected-item">
+                    {{ orgUnitModel.selectedOrgUnits[0].name }}
+                    <a (click)="deActivateNode(orgUnitModel.selectedOrgUnits[0].id,orgtree,$event)" class="removeorgunit">x</a>
+                </span>
+                <span class="selected-item">
+                    {{ orgUnitModel.selectedOrgUnits[1].name }}
+                    <a (click)="deActivateNode(orgUnitModel.selectedOrgUnits[1].id,orgtree,$event)" class="removeorgunit">x</a>
+                </span>
+                <span class="selected-item">
+                    &nbsp; and {{ orgUnitModel.selectedOrgUnits.length - 2 }} more
+                </span>
             </span>
             <span *ngIf="orgUnitModel.selectedOrgUnits.length <= 10 && orgUnitModel.selectedUserOrgUnits.length == 0">
-             <span *ngFor="let item of orgUnitModel.selectedOrgUnits" class="selected-item ng-binding ng-scope">
-              {{ item.name }}
-               <a (click)="deActivateNode(item.id,orgtree,$event)" class="removeorgunit">x</a>
-            </span>
+                <span *ngFor="let item of orgUnitModel.selectedOrgUnits" class="selected-item ng-binding ng-scope">
+                    {{ item.name }}
+                    <a (click)="deActivateNode(item.id,orgtree,$event)" class="removeorgunit">x</a>
+                </span>
             </span>
             <span class="no-selection" *ngIf="orgUnitModel.selectedOrgUnits.length == 0 && !orgUnitTreeConfig.loading && orgUnitModel.selectionMode != 'Usr_orgUnit'">{{ orgUnitTreeConfig.placeholder }}</span>
             <span *ngIf="orgUnitModel.selectedOrgUnits.length > 0" class="pull-right">
-        <span class="selected-item" style="cursor: pointer" (click)="clearAll()" style="opacity: 0.7">X clear all</span>
+                <span class="selected-item" style="cursor: pointer" (click)="clearAll()" style="opacity: 0.7">X clear all</span>
             </span>
             <span *ngIf="orgUnitTreeConfig.loading">{{ orgUnitTreeConfig.loading_message }}</span>
         </div>
@@ -35,14 +35,10 @@
     <div class="" [ngClass]="{'hiddenTree':showOrgTree}" id="tree_view">
         <div class="org-unit-selection-options">
             <div appClickOutside (clickOutside)="showOrgUnitSettings = false" style="position:relative;">
-                <button type="button" class="btn btn-sm btn-outline-secondary" (click)="toggleOrgUnitSettings($event)">
-        Options
-          <img
-            src="assets/icon/arrow-down.png"
-            class="float-right group-image"
-            style="padding-top: 5px; padding-left: 5px;"
-            alt="">
-        </button>
+                <button type="button" class="org-unit-option-btn" (click)="toggleOrgUnitSettings($event)">
+                    Options
+                    <img src="assets/icon/arrow-down.png" alt="">
+                </button>
                 <ul class="multiselect-dropdown" *ngIf="showOrgUnitSettings">
                     <li>
                         <a (click)="setType('orgUnit', $event)">
@@ -67,17 +63,20 @@
             <div>
                 <!--org_unit_groups-->
                 <div *ngIf="orgUnitModel.selectionMode == 'Group'">
-                    <app-multiselect [selectionMode]="orgUnitModel.selectionMode" [placeholder]="'Select Organisation units group'" [selected_items]="orgUnitModel.selectedGroups" [items]="orgUnitModel.orgUnitGroups" (onSelected)="setSelectedGroups($event)"></app-multiselect>
+                    <app-multiselect [selectionMode]="orgUnitModel.selectionMode" [placeholder]="'Select Organisation units group'" [selected_items]="orgUnitModel.selectedGroups"
+                        [items]="orgUnitModel.orgUnitGroups" (onSelected)="setSelectedGroups($event)"></app-multiselect>
 
                 </div>
                 <!--user_org_unit-->
                 <div [ngClass]="{'hiddenTree': orgUnitModel.selectionMode != 'orgUnit'}">
-                    <app-multiselect #period_selector [selectionMode]="orgUnitModel.selectionMode" [placeholder]="'Select Organisation Unit'" [items]="userOrgUnitsTypes" [selected_items]="orgUnitModel.selectedUserOrgUnits" (onSelected)="setSelectedUserOrg($event)"></app-multiselect>
+                    <app-multiselect #period_selector [selectionMode]="orgUnitModel.selectionMode" [placeholder]="'Select Organisation Unit'"
+                        [items]="userOrgUnitsTypes" [selected_items]="orgUnitModel.selectedUserOrgUnits" (onSelected)="setSelectedUserOrg($event)"></app-multiselect>
 
                 </div>
                 <!--org_unit_levels-->
                 <div *ngIf="orgUnitModel.selectionMode == 'Level'">
-                    <app-multiselect [selectionMode]="orgUnitModel.selectionMode" [prefix]="'Level: '" [prefix_multiple]="'Levels: '" [placeholder]="'Select Organisation units levels'" [selected_items]="orgUnitModel.selectedLevels" [items]="orgUnitModel.orgUnitLevels | filterLevel:organisationunits[0]:orgUnitModel.selectedOrgUnits"
+                    <app-multiselect [selectionMode]="orgUnitModel.selectionMode" [prefix]="'Level: '" [prefix_multiple]="'Levels: '" [placeholder]="'Select Organisation units levels'"
+                        [selected_items]="orgUnitModel.selectedLevels" [items]="orgUnitModel.orgUnitLevels | filterLevel:organisationunits[0]:orgUnitModel.selectedOrgUnits"
                         (onSelected)="setSelectedLevels($event)"></app-multiselect>
 
                 </div>
@@ -85,7 +84,8 @@
         </div>
         <div *ngIf="orgUnitTreeConfig.loading">{{ orgUnitTreeConfig.loading_message }}</div>
         <div class="tree-area" [ngClass]="{'someclass': orgUnitModel.selectedUserOrgUnits.length != 0}">
-            <tree-root #orgtree [nodes]="organisationunits" [focused]="true" [options]="customTemplateStringOrgunitOptions" (activate)="activateOrg($event)" (deactivate)="deactivateOrg($event)">
+            <tree-root #orgtree [nodes]="organisationunits" [focused]="true" [options]="customTemplateStringOrgunitOptions" (activate)="activateOrg($event)"
+                (deactivate)="deactivateOrg($event)">
                 <ng-template #treeNodeTemplate let-node>
                     <span (click)="updateModelOnSelect(node.data)">{{ node.data.name }}</span>
                 </ng-template>
@@ -94,8 +94,10 @@
 
     </div>
 
-    <div class="org-unit-actions float-right">
-        <button (click)="close($event)" class="dashboard-border dashboard-btn">Cancel</button>
-        <button (click)="emit($event)" class="dashboard-border dashboard-btn">Update</button>
+    <div class="org-unit-actions">
+        <div>
+            <button (click)="emit($event)" class="org-unit-action-btn">Update</button>
+            <button (click)="close($event)" class="org-unit-action-btn">Cancel</button>
+        </div>
     </div>
 </div>
