--- a/src/modules/period-filter/period-filter.component.scss
+++ b/src/modules/period-filter/period-filter.component.scss
@@ -1,115 +1,156 @@
 .period-filter-container {
-  /*display: grid;*/
-  /*grid-template-columns: repeat(2, 1fr);*/
-  /*border: solid 1px #dddddd;*/
-  padding: .2em;
+    /*display: grid;*/
+    /*grid-template-columns: repeat(2, 1fr);*/
+    /*border: solid 1px #dddddd;*/
+    padding: 0.2em;
 }
 
 .period-top-section {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .period-type-section,
 .period-year-section {
-  flex: 1;
+    flex: 1;
 }
 
 .period-year-section {
-  display: flex;
-  justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .period-header {
-  display: flex;
+    display: flex;
 }
-
 
 .period-top-section,
 .period-year-btns {
-  padding-bottom:.2em;
+    padding-bottom: 0.2em;
 }
 
 .period-available-header {
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-  border: solid 1px #dddddd;
-  padding: 5px 10px;
-  font-size: 13px;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    border: solid 1px #dddddd;
+    padding: 5px 10px;
+    font-size: 13px;
 }
 
 .period-selected-header {
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-  border-top: solid 1px #dddddd;
-  border-bottom: solid 1px #dddddd;
-  border-right: solid 1px #dddddd;
-  padding: 5px 10px;
-  font-size: 13px;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    border-top: solid 1px #dddddd;
+    border-bottom: solid 1px #dddddd;
+    border-right: solid 1px #dddddd;
+    padding: 5px 10px;
+    font-size: 13px;
 }
 
 .period-available-header a,
 .period-selected-header a {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .period-body {
-  display: flex;
-  border-left: solid 1px #dddddd;
-  border-right: solid 1px #dddddd;
-  border-bottom: solid 1px #dddddd;
+    display: flex;
+    border-left: solid 1px #dddddd;
+    border-right: solid 1px #dddddd;
+    border-bottom: solid 1px #dddddd;
 }
 
 .period-available-body,
 .period-selected-body {
-  flex: 1;
-  padding: .2em;
-  height: 220px;
-  overflow: auto;
+    flex: 1;
+    padding: 0.2em;
+    height: 240px;
+    overflow: auto;
 }
 
 .period-available-body {
-  border-right: solid 1px #dddddd;
+    border-right: solid 1px #dddddd;
 }
 
-.period-filter-btns {
-  display: flex;
-  padding-top: .2em;
+.period-filter-actions-btns {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 0.2em;
 }
 
 .period-available-body::-webkit-scrollbar,
 .period-selected-body::-webkit-scrollbar {
-  width: 5px;
+    width: 5px;
 }
 
 .period-available-body::-webkit-scrollbar-track,
 .period-selected-body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
-  border-radius: 10px;
+    background-color: #eeeeee;
 }
 
 .period-available-body::-webkit-scrollbar-thumb,
 .period-selected-body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .period-list {
-  list-style-type: none;
-  padding: 5px;
+    list-style-type: none;
+    padding: 5px;
 }
 
-.period-list > li > a {
-  padding: 5px;
-  display: block;
-  width: 100%;
-  cursor: pointer;
-  font-size: 12px;
-  color: #000000;
+.period-list>li>a {
+    padding: 5px;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    font-size: 12px;
+    color: #000000;
 }
 
-.period-list > li > a:hover {
-  background-color: #dddddd;
+.period-list>li>a:hover {
+    background-color: #dddddd;
+}
+
+.period-filter-select {
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    outline: none;
+    border: none;
+    background: transparent;
+    border-radius: 3px;
+    padding: 6px;
+}
+
+.period-filter-year-btn {
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    border-style: none;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 30px;
+    padding: 5px;
+    margin-left: 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.period-filter-action-btn {
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    border-style: none;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 30px;
+    padding: 5px;
+    margin-left: 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 3px;
 }
