--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -23,6 +23,47 @@ page-dashboard {
         padding-right: 5px;
         border-bottom: 0px solid #dedede;
     }
+    .visualization-card {
+        width: 100%;
+        position: absolute;
+        height: 100%;
+    }
+    .visualization-card-header {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        padding: 5px;
+        z-index: 500000;
+    }
+    .visualization-card-header-right,
+    .visualization-card-header-left {
+        display: inline-block;
+    }
+    .visualization-filter-section-container {
+        margin-right: 5px;
+    }
+    .visualization-card-body {
+        height: 100%;
+        display: flex;
+    }
+    .full-screen-dashboard-item-resize {
+        cursor: pointer;
+        padding: 5px;
+        width: 30px;
+        border-radius: 15px;
+    }
+    .full-screen-dashboard-item-resize img {
+        display: block;
+        margin: auto;
+        height: 18px;
+    }
+    .visualization-block {
+        overflow: hidden;
+    }
     .visualization-card-footer {
         position: relative;
         left: 0;
