Updataing translation files for all translation keyword using google translate

--- a/src/modules/data-filter/data-filter.component.html
+++ b/src/modules/data-filter/data-filter.component.html
@@ -88,4 +88,4 @@
         <button class="data-filter-actions-btn" (click)="emit($event)">{{ translationMapper['Update'] }}</button>
         <button class="data-filter-actions-btn" (click)="close($event)">{{ translationMapper['Close'] }}</button>
     </div>
-</div>=
+</div>
