--- a/src/components/multi-organisation-unit-tree/multi-organisation-unit-tree.html
+++ b/src/components/multi-organisation-unit-tree/multi-organisation-unit-tree.html
@@ -29,7 +29,7 @@
   </div>
   <div *ngIf="isOrganisationUnitsFetched && hasOrgUnitChildrenLoaded && !hasErrorOccurred">
     <div *ngFor="let organisationUnit of organisationUnit.children">
-      <multi-organisation-unit-tree [(selectedOrgUnits)]="selectedOrgUnits" (activate)="onActivateOu($event)" (deactivate)="onDeactivateOu($event)"
+      <multi-organisation-unit-tree [selectedOrgUnits]="selectedOrgUnits" (activate)="onActivateOu($event)" (deactivate)="onDeactivateOu($event)"
         [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened" [organisationUnit]="organisationUnit" [currentUser]="currentUser"
         [toggledOuIds]="toggledOuIds"></multi-organisation-unit-tree>
     </div>
