--- a/src/components/organisation-unit-tree/organisation-unit-tree.html
+++ b/src/components/organisation-unit-tree/organisation-unit-tree.html
@@ -5,10 +5,7 @@
     item-left></ion-icon>
 
   <div (tap)="setSelectedOrganisationUnit(organisationUnit)">
-    <span ion-text [color]="(currentSelectedOrgUnitName == organisationUnit.name) ?'current' : 'font-color'">{{ organisationUnit.name }}</span>
-    <span *ngIf="shouldIndicateAssigmentsIssues && ouIdsWithAssigments">
-      &nbsp;==&nbsp;{{ ouIdsWithAssigments.indexOf(organisationUnit.id) }}
-    </span>
+    <span ion-text [color]="(shouldIndicateAssigmentsIssues && ouIdsWithAssigments && ouIdsWithAssigments.indexOf(organisationUnit.id)  == -1 )? 'ou-assigment-issues' : (currentSelectedOrgUnitName == organisationUnit.name) ?'current' : 'font-color'">{{ organisationUnit.name }}</span>
   </div>
 
 </ion-item>
@@ -39,12 +36,4 @@
 
     </div>
   </div>
-
-
-
-
-
-
-
-
 </div>
