--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,46 +1,34 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
-
 // Font path is used to include ionicons,
 // roboto, and noto sans fonts
-$font-path: "../assets/fonts";
-
-
+$font-path: '../assets/fonts';
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
-
-
-@import "ionic.globals";
-
-
+@import 'ionic.globals';
 // Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
-$text-color:        #7A7A7A;
-$action-sheet-md-title-font-size : 1.8rem;
-$list-inset-ios-border-radius : 5px;
-$list-inset-md-border-radius : 5px;
-$list-inset-wp-border-radius : 5px;
-$text-input-ios-show-focus-highlight : false;
-$text-input-md-show-focus-highlight : false;
-
-$searchbar-ios-background-color :#ffffff;
-$searchbar-ios-border-color :#ffffff;
-$searchbar-ios-input-text-color : $text-color;
-$searchbar-ios-input-background-color :#ffffff;
-
-$searchbar-md-background-color :#ffffff;
-$searchbar-md-border-color :#ffffff;
-$searchbar-md-input-text-color : $text-color;
-$searchbar-md-input-background-color :#ffffff;
-
-
-
+$text-color: #7a7a7a;
+$action-sheet-md-title-font-size: 1.8rem;
+$list-inset-ios-border-radius: 5px;
+$list-inset-md-border-radius: 5px;
+$list-inset-wp-border-radius: 5px;
+$text-input-ios-show-focus-highlight: false;
+$text-input-md-show-focus-highlight: false;
+$searchbar-ios-background-color: #ffffff;
+$searchbar-ios-border-color: #ffffff;
+$searchbar-ios-input-text-color: $text-color;
+$searchbar-ios-input-background-color: #ffffff;
+$searchbar-md-background-color: #ffffff;
+$searchbar-md-border-color: #ffffff;
+$searchbar-md-input-text-color: $text-color;
+$searchbar-md-input-background-color: #ffffff;
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
@@ -48,64 +36,43 @@ $searchbar-md-input-background-color :#ffffff;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-
 $colors: (
-  primary:    #488aff,
-  secondary:  #5CB85C,
-  border-color: #E6E6E7,
-  badge-color : #E5E5E5,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  font-color: #7A7A7A,
-  whitecolor: #F4F4F4,
-  icon-color : #97CBFD,
-  dark:       #222,
-  favorite:   #69BB7B,
-  current: #ffa500
+  primary: #488aff,
+  secondary: #5cb85c,
+  border-color: #e6e6e7,
+  badge-color: #e5e5e5,
+  danger: #f53d3d,
+  light: #f4f4f4,
+  font-color: #7a7a7a,
+  whitecolor: #f4f4f4,
+  icon-color: #97cbfd,
+  dark: #222,
+  favorite: #69bb7b,
+  current: #ffa500,
+  ou-assigment-issues: #ff6767
 );
-
-
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
-
-
-
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
-
-
-
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
-
-
 // App Theme
 // --------------------------------------------------
 // Ionic apps can have different themes applied, which can
 // then be future customized. This import comes last
 // so that the above variables are used and Ionic's
 // default are overridden.
-
-@import "ionic.theme.default";
-
-
+@import 'ionic.theme.default';
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/ionicons/
-
-@import "ionic.ionicons";
-
-
+@import 'ionic.ionicons';
 // Fonts
 // --------------------------------------------------
-
-@import "roboto";
-@import "noto-sans";
+@import 'roboto';
+@import 'noto-sans';
